<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorBlanco"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_user"
            android:gravity="center"
            android:text="@string/msjTituloPrincipal"
            android:textSize="25sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/area_contenido"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/msjTopping"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbSuprem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/msjSuprem" />

                <RadioButton
                    android:id="@+id/rbVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msjVegetarian" />

                <RadioButton
                    android:id="@+id/rbHawaiian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msjHawaiian" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msjSauce"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spSauce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/opciones" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msjExtras"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chExtraCheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msjExtraCheese" />

            <CheckBox
                android:id="@+id/chGluten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msjGluten" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/efecto_boton"
                android:onClick="calcular"
                android:text="@string/msjOrdenar" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/subtitulo"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msjOrdenar"
                android:textColor="@color/colorBlanco" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>