<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorBlanco"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_user"
            android:gravity="center"
            android:text="@string/msjTituloPrincipal"
            android:textSize="25sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/area_contenido"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="174dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                app:srcCompat="@drawable/imc" />

            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/msjDigPEso"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtEstatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/msjDigEstatura"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/efecto_boton"
                android:onClick="calcular"
                android:text="@string/msjBotonIMC" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/subtitulo"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msjMenu"
                android:textColor="@color/colorBlanco" />
        </LinearLayout>

    </FrameLayout>




</LinearLayout>